--- a/ui/src/app/connect/static-properties/static-color-picker/static-color-picker.component.html
+++ b/ui/src/app/connect/static-properties/static-color-picker/static-color-picker.component.html
@@ -22,7 +22,7 @@
                    [(colorPicker)]="staticProperty.selectedColor"
                    (colorPickerChange)="parentForm.get(staticProperty.internalName).setValue($event)"
                    [cpPosition]="'bottom'"
-                   formControlName="{{staticProperty.internalName}}"
+                   formControlName="{{fieldName}}"
                    [style.background]="staticProperty.selectedColor" required
                    (blur)="emitUpdate()" [cpPresetColors] = "presetColors"/>
         </mat-form-field>
