--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -48,6 +48,7 @@
                                      [staticProperties]="cachedPipelineElement.staticProperties"
                                      [eventSchemas]="eventSchemas"
                                      [parentForm]="parentForm"
+                                     [fieldName]="config.internalName"
                                      (validateEmitter)="validConfiguration($event)">
                 </app-static-property>
                 </form>
