--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -31,33 +31,43 @@
                 </div>
             </div>
             <div fxFlex="100" fxLayout="row" *ngIf="restrictedEditMode">
-                    <div fxFlex="100" fxLayout="column">
-                        <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
-                            <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
-                                 fxLayout="row">
-                                You can only modify things that don't affect your pipeline structure. To fully
-                                modify this element, make sure that it doesn't connect to any successors (remove
-                                outgoing connectors).
-                            </div>
+                <div fxFlex="100" fxLayout="column">
+                    <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
+                        <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
+                             fxLayout="row">
+                            You can only modify things that don't affect your pipeline structure. To fully
+                            modify this element, make sure that it doesn't connect to any successors (remove
+                            outgoing connectors).
                         </div>
                     </div>
+                </div>
             </div>
             <div fxFlex="100" fxLayout="column" class="customize-section p-15">
                 <form [formGroup]="parentForm" fxFlex="100">
-                <app-static-property *ngFor="let config of cachedPipelineElement.staticProperties" [staticProperty]="config"
-                                     [staticProperties]="cachedPipelineElement.staticProperties"
-                                     [eventSchemas]="eventSchemas"
-                                     [parentForm]="parentForm"
-                                     [fieldName]="config.internalName"
-                                     (validateEmitter)="validConfiguration($event)">
-                </app-static-property>
+                    <app-static-property *ngFor="let config of cachedPipelineElement.staticProperties"
+                                         [staticProperty]="config"
+                                         [staticProperties]="cachedPipelineElement.staticProperties"
+                                         [eventSchemas]="eventSchemas"
+                                         [parentForm]="parentForm"
+                                         [fieldName]="config.internalName"
+                                         (validateEmitter)="validConfiguration($event)">
+                    </app-static-property>
+                    <div *ngIf="isDataProcessor">
+                        <output-strategy *ngFor="let outputStrategy of cachedPipelineElement.outputStrategies"
+                                         [parentForm]="parentForm"
+                                         [outputStrategy]="outputStrategy"
+                                         [selectedElement]="cachedPipelineElement"
+                                         [restrictedEditMode]="restrictedEditMode">
+                        </output-strategy>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
     <mat-divider></mat-divider>
     <div class="sp-dialog-actions">
-        <button mat-button mat-raised-button color="primary" (click)="save()" style="margin-right:10px;" [disabled]="!(formValid)">
+        <button mat-button mat-raised-button color="primary" (click)="save()" style="margin-right:10px;"
+                [disabled]="!(formValid)">
             Save
         </button>
         <button mat-button mat-raised-button class="mat-basic" (click)="close()">
