--- a/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.html
+++ b/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.html
@@ -18,10 +18,10 @@
 
 <div fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="row" class="static-property-panel">
-        <div fxFlex="40" fxLayout="column">
+        <div fxFlex="30" fxLayout="column">
             <b>Select output</b>
         </div>
-        <div fxFlex="60">
+        <div fxFlex="70">
             <div class="customize-item-content"
                  *ngIf="outputStrategy['@class'] === 'org.apache.streampipes.model.output.CustomOutputStrategy'">
                 <custom-output-strategy [outputStrategy]="outputStrategy"
@@ -32,11 +32,11 @@
             </div>
             <div class="customize-item-content"
                  *ngIf="outputStrategy['@class'] === 'org.apache.streampipes.model.output.UserDefinedOutputStrategy'">
-                <user-defined-output output-strategy="outputStrategy"
-                                     selected-element="ctrl.selectedElement"
-                                     customize-form="ctrl.customizeForm"
-                                     restricted-edit-mode="ctrl.restrictedEditMode">
-                </user-defined-output>
+                <user-defined-output-strategy [outputStrategy]="outputStrategy"
+                                     [selectedElement]="selectedElement"
+                                     [parentForm]="parentForm"
+                                     [restrictedEditMode]="restrictedEditMode">
+                </user-defined-output-strategy>
             </div>
         </div>
     </div>
