--- a/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.scss
+++ b/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.scss
@@ -16,3 +16,9 @@
  *
  */
 
+.static-property-panel {
+  border-left:5px solid gray;
+  padding-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
