[STREAMPIPES-145] Restrict output strategy rendering to customizable output strategies

--- a/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.html
+++ b/ui/src/app/editor-v2/components/output-strategy/output-strategy.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column">
+<div fxFlex="100" fxLayout="column" *ngIf="customizableOutputStrategy">
     <div fxFlex="100" fxLayout="row" class="static-property-panel">
         <div fxFlex="30" fxLayout="column">
             <b>Select output</b>
