[STREAMPIPES-145] Add restrictedEditMode

--- a/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.scss
+++ b/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.scss
@@ -24,7 +24,7 @@ standard-dialog-container {
   box-shadow: -7px 0px 5px -5px #5d5d5d;
 }
 
-.dialog-panel {
+.standard-dialog-panel {
   max-height: 80vh;
   height: 100%;
   display: grid;
