--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -30,8 +30,8 @@
                     </mat-slide-toggle>
                 </div>
             </div>
-            <div fxFlex="100" fxLayout="row" *ngIf="restrictedEditMode">
-                <div fxFlex="100" fxLayout="column">
+            <div fxLayout="row" *ngIf="restrictedEditMode">
+                <div fxLayout="column">
                     <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
                         <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
                              fxLayout="row">
