--- a/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.html
+++ b/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div class="dialog-panel">
+<div class="standard-dialog-panel">
     <div class="dialog-panel-header">
         <span class="dialog-title">{{ dialogTitle }}</span>
         <button mat-button mat-icon-button (click)="close()">
