--- a/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -18,17 +18,14 @@
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayoutAlign="start center">
-        <div>{{staticProperty.label}}:
-            <mat-hint class="description">{{staticProperty.description}}</mat-hint>
-        </div>
         <button mat-button mat-raised-button color="primary" class="small-button" (click)="selectAll()"
                 style="margin-right:10px;margin-left:10px;">Select all
         </button>
         <button mat-button mat-raised-button class="mat-basic small-button" (click)="selectNone()">Select
             none</button>
     </div>
-    <div fxFlex="100" fxLayout="row">
-                <mat-checkbox *ngFor="let property of availableProperties" [(ngModel)]="property['checked']"
+    <div fxFlex="100" fxLayout="column" style="margin-top:10px;">
+                <mat-checkbox *ngFor="let property of availableProperties | displayRecommendedPipe: staticProperty.propertyScope: displayRecommended" [(ngModel)]="property['checked']"
                               (change)="selectOption(property, $event)"
                               style="margin-left: 10px;">
                     {{property.runtimeName}}
