--- a/ui/src/app/connect/static-properties/static-group/static-group.component.html
+++ b/ui/src/app/connect/static-properties/static-group/static-group.component.html
@@ -16,10 +16,12 @@
   ~
   -->
 
-<div *ngIf="!staticProperty.horizontalRendering" class="padding" fxLayout="column">
+<div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
     <app-static-property *ngFor="let property of staticProperty.staticProperties"
                          [adapterId]="adapterId"
+                         [parentForm]="parentForm"
                          [staticProperties]="staticProperties"
+                         [fieldName]="property.internalName"
                          [eventSchemas]="eventSchemas"
                          [staticProperty]="property"
                          [displayRecommended]="displayRecommended"
@@ -28,11 +30,11 @@
 </div>
 
 
-<div *ngIf="staticProperty.horizontalRendering"  class="padding" fxLayout="row" fxLayoutAlign="space-between center">
+<div *ngIf="staticProperty.horizontalRendering" fxLayout="row" fxLayoutAlign="space-between center">
     <ng-container *ngFor="let property of staticProperty.staticProperties; let i = index">
         <span *ngIf="i > 0" style="margin-left: 10px;"></span>
         <app-static-property
-                [adapterId]="adapterId" [staticProperties]="staticProperties" [eventSchema]="eventSchema"
+                [adapterId]="adapterId" [staticProperties]="staticProperties" [eventSchemas]="eventSchemas"
                 [staticProperty]="property" (validateEmitter)="valueChange($event)" class="test fullWidth">
         </app-static-property>
     </ng-container>
