--- a/ui/src/app/editor-v2/dialog/welcome-tour/welcome-tour.component.scss
+++ b/ui/src/app/editor-v2/dialog/welcome-tour/welcome-tour.component.scss
@@ -17,3 +17,25 @@
  */
 
 @import '../../../../scss/sp/sp-dialog.scss';
+
+.welcome-animation {
+  font-family: Arial;
+  border-right: .1em solid black;
+  width: 5ch;
+  white-space: nowrap;
+  overflow: hidden;
+  -webkit-animation: typing 1s steps(5, end),
+  blink-caret .5s step-end infinite alternate;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink-caret {
+  50% {
+    border-color: transparent;
+  }
+}
