--- a/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.html
+++ b/ui/src/app/core-ui/dialog/standard-dialog/standard-dialog.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div class="standard-dialog-panel">
-    <div class="dialog-panel-header">
+    <div class="standard-dialog-panel-header">
         <span class="dialog-title">{{ dialogTitle }}</span>
         <button mat-button mat-icon-button (click)="close()">
             <i class="material-icons" style="font-size:25px;color:white;">clear</i>
