--- a/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -28,3 +28,15 @@
     background-color: darkblue;
     font-size: 12px;
 }
+
+.icon-stand {
+    max-height: 200px;
+    padding-bottom: 1%;
+    overflow-y: auto;
+    border-top: 0px;
+}
+
+.border {
+    border: 1px solid #cccccc;
+    border-top: 0;
+}
