--- a/ui/src/app/editor-v2/editor.component.html
+++ b/ui/src/app/editor-v2/editor.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxLayout="column" class="page-container">
-    <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
+    <div fxLayout="row" class="border" style="padding:0px;background-color:#f6f6f6;">
         <div fxFlex="100" style="line-height:24px;border-bottom:1px solid #ccc">
             <div fxFlex="100" fxLayout="row">
                 <div fxFlex fxLayoutAlign="start center" [attr.id]="'peType'">
