--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -31,38 +31,47 @@
                     </mat-slide-toggle>
                 </div>
             </div>
-            <div fxLayout="row" *ngIf="restrictedEditMode">
-                <div fxLayout="column">
-                    <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
-                        <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
-                             fxLayout="row">
-                            You can only modify things that don't affect your pipeline structure. To fully
-                            modify this element, make sure that it doesn't connect to any successors (remove
-                            outgoing connectors).
+            <div fxFlex="100" fxLayout="row">
+                <div fxFlex="{{_showDocumentation ? 50: 100}}">
+                    <div fxLayout="column">
+                        <div fxLayout="row" *ngIf="restrictedEditMode">
+                            <div fxLayout="column">
+                                <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
+                                    <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
+                                         fxLayout="row">
+                                        You can only modify things that don't affect your pipeline structure. To fully
+                                        modify this element, make sure that it doesn't connect to any successors (remove
+                                        outgoing connectors).
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div fxFlex="100" fxLayout="column" class="customize-section p-15">
+                            <form [formGroup]="parentForm" fxFlex="100">
+                                <app-static-property *ngFor="let config of cachedPipelineElement.staticProperties"
+                                                     [staticProperty]="config"
+                                                     [displayRecommended]="displayRecommended"
+                                                     [staticProperties]="cachedPipelineElement.staticProperties"
+                                                     [eventSchemas]="eventSchemas"
+                                                     [parentForm]="parentForm"
+                                                     [fieldName]="config.internalName"
+                                                     (validateEmitter)="validConfiguration($event)">
+                                </app-static-property>
+                                <div *ngIf="isDataProcessor">
+                                    <output-strategy *ngFor="let outputStrategy of cachedPipelineElement.outputStrategies"
+                                                     [parentForm]="parentForm"
+                                                     [outputStrategy]="outputStrategy"
+                                                     [selectedElement]="cachedPipelineElement"
+                                                     [restrictedEditMode]="restrictedEditMode">
+                                    </output-strategy>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div fxFlex="100" fxLayout="column" class="customize-section p-15">
-                <form [formGroup]="parentForm" fxFlex="100">
-                    <app-static-property *ngFor="let config of cachedPipelineElement.staticProperties"
-                                         [staticProperty]="config"
-                                         [displayRecommended]="displayRecommended"
-                                         [staticProperties]="cachedPipelineElement.staticProperties"
-                                         [eventSchemas]="eventSchemas"
-                                         [parentForm]="parentForm"
-                                         [fieldName]="config.internalName"
-                                         (validateEmitter)="validConfiguration($event)">
-                    </app-static-property>
-                    <div *ngIf="isDataProcessor">
-                        <output-strategy *ngFor="let outputStrategy of cachedPipelineElement.outputStrategies"
-                                         [parentForm]="parentForm"
-                                         [outputStrategy]="outputStrategy"
-                                         [selectedElement]="cachedPipelineElement"
-                                         [restrictedEditMode]="restrictedEditMode">
-                        </output-strategy>
-                    </div>
-                </form>
+                <div fxFlex="50" *ngIf="_showDocumentation" style="padding-left:10px;border-left: 2px solid rgb(204, 204, 204);">
+                    <pipeline-element-documentation [useStyling]="false" [appId]="pipelineElement.payload.appId"></pipeline-element-documentation>
+                </div>
             </div>
         </div>
     </div>
